# TTS-TurboQuant

./: .gitignore  Makefile  README.md  analyze_results.py  pyproject.toml
benchmarks/: run_all.py
examples/: qwen3_tts_turboquant.py
models/Qwen3-TTS/: pyproject.toml
models/Qwen3-TTS/benchmarks/: benchmark_qwen3tts.py  benchmark_qwen3tts_real.py
models/Qwen3-TTS/qwen_tts/core/models/: __init__.py  modeling_qwen3_tts.py  turboquant_kv_cache.py
models/Qwen3-TTS/tests/: benchmark_compression.py  test_turboquant_cache.py
turboquant/: __init__.py  config.py  pyproject.toml
