[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turboquant"
version = "0.3.0"
description = "MSE-optimal KV cache compression via Lloyd-Max quantization and random rotation"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
  "torch",
  "scipy>=1.10.0",
]
